[tool.poetry]
name = "connections-bot"
version = "0.1.0"
description = ""
authors = ["Chris Aberle <35345242+chrisaberle@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "connections_bot"}]

[tool.poetry.dependencies]
python = "^3.7,<3.13"
slack-sdk = "^3.23.0"
python-dotenv = "^1.0.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.6"
pandas = "^2.1.1"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
python-multipart = "^0.0.6"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
